docs(onboarding): clarify java embed dependency and live channels in hero
Streamline root README 30s quickstart hero to only advertise live channels, removing unreleased Homebrew/Scoop zero-hash snippets. Document daemon vs CLI runner architectural distinction in docker.md, and explicitly document com.spectrayan:spector-client as the JVM embed artifact across getting-started guides.

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>